Prototype in progress... (implement find_files)  Changes to be committed: 	modified:   TODO 	new file:   lib/console/color.py 	new file:   lib/find_files.py 	modified:   lib/run.py 	modified:   lib/step_definitions.py 	new file:   tests/features/a/a1.feature 	new file:   tests/features/a/c/c1.feature 	new file:   tests/features/a2/c/c1.feature 	new file:   tests/features/a2/f1 	new file:   tests/features/b/b1.feature 	new file:   tests/features/f1.feature 	new file:   tests/features/f2.feature 	new file:   tests/features/f3 	new file:   tests/find_files_tests.py 	new file:   tests/run_tests.py 	new file:   tests/step_definitions2/steps.py 	modified:   tests/step_definitions_tests.py

--- a/TODO
+++ b/TODO
@@ -19,10 +19,12 @@
     - set defaults (language, etc.)
   - Version
   + AttributeMapper
+  + Find files
 
  - Tests:
   - sequence
   - guess url
+  - more tests for find_files
 
  - Gherkin
   + Grammar
@@ -37,16 +39,15 @@
  
  - StepDefinitions (step definitions collector)
   - Options:
-    - require
     - guess
 
  - Run
   - Options:
     - tags
     - scenario_names
-    - excludes
-    - path
-    - require
+    + excludes
+    + path
+    + require
     - dry_run
     - strict
     - autoformat
