Prorotype in progress (pretty reporter in the way) Changes to be committed: 	modified:   TODO 	modified:   examples/add.feature 	modified:   lib/cfg/set_defaults.py 	new file:   lib/colors/__init__.py 	new file:   lib/colors/color_scheme.py 	renamed:    lib/console/colored_output.py -> lib/colors/colored_output.py 	renamed:    lib/console/color.py -> lib/colors/console_colors.py 	new file:   lib/colors/highlight_groups.py 	deleted:    lib/console/__init__.py 	modified:   lib/context.py 	modified:   lib/gherkin/feature_parser.py 	modified:   lib/reporter.py 	new file:   lib/reporters/__init__.py 	new file:   lib/reporters/pretty.py 	modified:   lib/run.py 	modified:   lib/step_definitions.py 	modified:   load_feat.py 	new file:   tests/colors/color_scheme_tests.py 	new file:   tests/colors/console_colors_tests.py 	new file:   tests/colors/highlight_groups_tests.py 	modified:   tests/context_tests.py 	modified:   tests/step_definitions_tests.py

--- a/TODO
+++ b/TODO
@@ -123,6 +123,9 @@
     - format
     - profile
 
+skip steps
+
+
  Scheme
 ==============================
 
@@ -165,3 +168,5 @@ Configuration -->  Run  <-- StepDefinitions
 ==============================
 
  - Try to implement setting language per Features instance
+ - Add default values for hooks decorators
+ - Change closures to partial
