prototype is ready! Changes to be committed: 	modified:   TODO 	modified:   examples/add.feature 	modified:   examples/step_definitions/calculator.py 	modified:   lib/cfg/default_options.py 	modified:   lib/context.py 	modified:   lib/find_files.py 	modified:   lib/gherkin/feature_parser.py 	modified:   lib/peg/source.py 	modified:   lib/reporters/pretty.py 	modified:   lib/run.py 	modified:   lib/step_definitions.py 	deleted:    load_feat.py 	new file:   pypumber.py 	deleted:    test_app.py 	modified:   tests/peg/source_tests.py

--- a/TODO
+++ b/TODO
@@ -99,7 +99,7 @@
  - Reporters
 	- pretty
     - Options:
-      - [no-]color
+      + [no-]color
       - no-source
       - no-snippets
       - verbose
